<resources>
    <string name="app_name">Cake Shop App</string>
    <string name="cake_shop_215">Cake &amp; Bakes 215</string>
    <string name="today_s_cake_specials">Today\'s Cake Specials</string>
    <string name="date_of_delivery"> Date of Delivery</string>
    <string name="red_velvet"> Red Velvet\n <b>₹1375</b></string>
    <string name="cheesecake"> Cheesecake\n <b>₹1000</b></string>
    <string name="chocolate"> Chocolate\n <b>₹1100</b></string>
    <string name="ice_cream"> Ice Cream\n <b>₹700</b></string>
    <string name="marble"> Marble\n <b>₹300</b></string>
    <string name="cookie"> Cookie\n <b>₹800</b></string>
    <string name="place_order">PLACE ORDER</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="name">Full Name</string>
    <string name="reset">RESET</string>
    <string name="booking_confirmation">Booking Confirmation</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="thank_you_for_choosing_us_here_s_your_order">Thank you for choosing us. Here\'s your order</string>
    <string name="msg">What\'s the occasion ?</string>
    <string name="special_message"> Time of Delivery</string>
    <string name="contact">Contact</string>
    <string name="_10_digit_number">10 digit number</string>
    <string name="special_message1"> Special Message</string>
    <string name="what_should_we_write">What to write?</string>
    <string name="when_should_we_deliver">When should we deliver ?</string>
    <string name="do_you_want_cutlery">Want cutlery ?</string>
    <string name="what_time_should_we_deliver">And at what time ?</string>
    <string name="cutlery"> Cutlery</string>
</resources>